replaced File objects with Resource objects
git-svn-id: https://tuftsvue.svn.sourceforge.net/svnroot/tuftsvue/branches/helenoliver@10692 d66e5487-c4fa-4dda-8c8e-ca23240363c0

--- a/VUE2/src/tufts/vue/VueResources.properties
+++ b/VUE2/src/tufts/vue/VueResources.properties
@@ -914,7 +914,7 @@ nodetoolpanel.nodeshape.tooltip=Node Shape
 
 #HO 29/10/2010 BEGIN **************
 #NodeToolPanel
-IBISnodetoolpanel.image=Image
+IBISnodetoolpanel.image=IBIS Node Type
 #IBISnodetoolpanel.link=Link
 #IBISnodetoolpanel.linkshape.tooltip=Link Shape 
 IBISnodetoolpanel.nodeimage.tooltip=IBIS Node Image
@@ -1948,7 +1948,9 @@ IBISNodeTool.issue.imageClass=tufts.vue.ibisimage.IBISIssueImage
 
 IBISNodeTool.issue.raw=/tufts/vue/images/issue_icon.jpg
 
+#HO 17/12/2010 BEGIN
 IBISNodeTool.issue.image=/tufts/vue/images/issue.jpg
+IBISNodeTool.issue.image.filename=issue.jpg
 
 IBISNodeTool.issue.icon=/tufts/vue/images/issue_icon.jpg
 
@@ -1975,6 +1977,7 @@ IBISNodeTool.answer.imageClass=tufts.vue.ibisimage.IBISAnswerImage
 IBISNodeTool.answer.raw=/tufts/vue/images/answer_icon.jpg
 
 IBISNodeTool.answer.image=/tufts/vue/images/answer.jpg
+IBISNodeTool.answer.image.filename=answer.jpg
 
 IBISNodeTool.answer.icon=/tufts/vue/images/answer_icon.jpg
 
@@ -2000,6 +2003,7 @@ IBISNodeTool.pro_argument.imageClass=tufts.vue.ibisimage.IBISProArgumentImage
 IBISNodeTool.pro_argument.raw=/tufts/vue/images/pro_argument_icon.jpg
 
 IBISNodeTool.pro_argument.image=/tufts/vue/images/pro_argument.jpg
+IBISNodeTool.pro_argument.image.filename=pro_argument.jpg
 
 IBISNodeTool.pro_argument.icon=/tufts/vue/images/pro_argument_icon.jpg
 
@@ -2028,6 +2032,7 @@ IBISNodeTool.issue_resolved.type=issue
 IBISNodeTool.issue_resolved.raw=/tufts/vue/images/issue_resolved.jpg
 
 IBISNodeTool.issue_resolved.image=/tufts/vue/images/issue_resolved.jpg
+IBISNodeTool.issue_resolved.image.filename=issue_resolved.jpg
 
 IBISNodeTool.issue_resolved.icon=/tufts/vue/images/chii_whistling_icon.gif
 #HO 13/12/2010 END ***************
@@ -2039,6 +2044,8 @@ IBISNodeTool.issue_insoluble.cssName=issue_insoluble
 IBISNodeTool.issue_insoluble.iconClass=tufts.vue.ibisicon.IBISIssue_InsolubleIcon
 IBISNodeTool.issue_insoluble.imageClass=tufts.vue.ibisimage.IBISIssue_InsolubleImage
 IBISNodeTool.issue_insoluble.raw=/tufts/vue/images/issue_insoluble.jpg
+IBISNodeTool.issue_insoluble.image=/tufts/vue/images/issue_insoluble.jpg
+IBISNodeTool.issue_insoluble.image.filename=issue_insoluble.jpg
 IBISNodeTool.issue_insoluble.type=issue
 
 IBISNodeTool.issue_rejected.class=tufts.vue.IBISNodeTool$IBISSubTool
@@ -2054,6 +2061,8 @@ IBISNodeTool.issue_rejected.iconClass=tufts.vue.ibisicon.IBISIssue_RejectedIcon
 IBISNodeTool.issue_rejected.imageClass=tufts.vue.ibisimage.IBISIssue_RejectedImage
 
 IBISNodeTool.issue_rejected.raw=/tufts/vue/images/issue_rejected.jpg
+IBISNodeTool.issue_rejected.image=/tufts/vue/images/issue_rejected.jpg
+IBISNodeTool.issue_rejected.image.filename=issue_rejected.jpg
 
 IBISNodeTool.issue_rejected.type=issue
 
@@ -2072,6 +2081,7 @@ IBISNodeTool.con_argument.imageClass=tufts.vue.ibisimage.IBISConArgumentImage
 IBISNodeTool.con_argument.raw=/tufts/vue/images/con_argument_icon.jpg
 
 IBISNodeTool.con_argument.image=/tufts/vue/images/con_argument.jpg
+IBISNodeTool.con_argument.image.filename=con_argument.jpg
 
 IBISNodeTool.con_argument.icon=/tufts/vue/images/con_argument_icon.jpg
 
@@ -2094,6 +2104,8 @@ IBISNodeTool.answer_rejected.iconClass=tufts.vue.ibisicon.IBISAnswer_RejectedIco
 IBISNodeTool.answer_rejected.imageClass=tufts.vue.ibisimage.IBISAnswer_RejectedImage
 
 IBISNodeTool.answer_rejected.raw=/tufts/vue/images/answer_rejected.jpg
+IBISNodeTool.answer_rejected.image=/tufts/vue/images/answer_rejected.jpg
+IBISNodeTool.answer_rejected.image.filename=answer_rejected.jpg
 
 IBISNodeTool.answer_rejected.type=answer
 
@@ -2109,7 +2121,10 @@ IBISNodeTool.answer_accepted.iconClass=tufts.vue.ibisicon.IBISAnswer_AcceptedIco
 
 IBISNodeTool.answer_accepted.imageClass=tufts.vue.ibisimage.IBISAnswer_AcceptedImage
 
+#HO 17/12/2010 BEGIN *****
 IBISNodeTool.answer_accepted.raw=/tufts/vue/images/answer_accepted.jpg
+IBISNodeTool.answer_accepted.image=/tufts/vue/images/answer_accepted.jpg
+IBISNodeTool.answer_accepted.image.filename=answer_accepted.jpg
 
 IBISNodeTool.answer_accepted.type=answer
 
@@ -2126,6 +2141,8 @@ IBISNodeTool.answer_likely.iconClass=tufts.vue.ibisicon.IBISAnswer_LikelyIcon
 IBISNodeTool.answer_likely.imageClass=tufts.vue.ibisimage.IBISAnswer_LikelyImage
 
 IBISNodeTool.answer_likely.raw=/tufts/vue/images/answer_likely.jpg
+IBISNodeTool.answer_likely.image=/tufts/vue/images/answer_likely.jpg
+IBISNodeTool.answer_likely.image.filename=answer_likely.jpg
 
 IBISNodeTool.answer_likely.type=answer
 
@@ -2142,6 +2159,8 @@ IBISNodeTool.answer_unlikely.iconClass=tufts.vue.ibisicon.IBISAnswer_UnlikelyIco
 IBISNodeTool.answer_unlikely.imageClass=tufts.vue.ibisimage.IBISAnswer_UnlikelyImage
 
 IBISNodeTool.answer_unlikely.raw=/tufts/vue/images/answer_unlikely.jpg
+IBISNodeTool.answer_unlikely.image=/tufts/vue/images/answer_unlikely.jpg
+IBISNodeTool.answer_unlikely.image.filename=answer_unlikely.jpg
 
 IBISNodeTool.answer_unlikely.type=answer
 
@@ -2158,6 +2177,8 @@ IBISNodeTool.pro_argument_dominant.iconClass=tufts.vue.ibisicon.IBISProArgument_
 IBISNodeTool.pro_argument_dominant.imageClass=tufts.vue.ibisimage.IBISProArgument_DominantImage
 
 IBISNodeTool.pro_argument_dominant.raw=/tufts/vue/images/pro_argument_dominant.jpg
+IBISNodeTool.pro_argument_dominant.image=/tufts/vue/images/pro_argument_dominant.jpg
+IBISNodeTool.pro_argument_dominant.image.filename=pro_argument_dominant.jpg
 
 IBISNodeTool.pro_argument_dominant.type=pro_argument
 
@@ -2174,6 +2195,8 @@ IBISNodeTool.pro_argument_failing.iconClass=tufts.vue.ibisicon.IBISProArgument_F
 IBISNodeTool.pro_argument_failing.imageClass=tufts.vue.ibisimage.IBISProArgument_FailingImage
 
 IBISNodeTool.pro_argument_failing.raw=/tufts/vue/images/pro_argument_failing.jpg
+IBISNodeTool.pro_argument_failing.image=/tufts/vue/images/pro_argument_failing.jpg
+IBISNodeTool.pro_argument_failing.image.filename=pro_argument_failing.jpg
 
 IBISNodeTool.pro_argument_failing.type=pro_argument
 
@@ -2190,6 +2213,8 @@ IBISNodeTool.con_argument_dominant.iconClass=tufts.vue.ibisicon.IBISConArgument_
 IBISNodeTool.con_argument_dominant.imageClass=tufts.vue.ibisimage.IBISConArgument_DominantImage
 
 IBISNodeTool.con_argument_dominant.raw=/tufts/vue/images/con_argument_dominant.jpg
+IBISNodeTool.con_argument_dominant.image=/tufts/vue/images/con_argument_dominant.jpg
+IBISNodeTool.con_argument_dominant.image.filename=con_argument_dominant.jpg
 
 IBISNodeTool.con_argument_dominant.type=con_argument
 
@@ -2206,6 +2231,8 @@ IBISNodeTool.con_argument_failing.iconClass=tufts.vue.ibisicon.IBISConArgument_F
 IBISNodeTool.con_argument_failing.imageClass=tufts.vue.ibisimage.IBISConArgument_FailingImage
 
 IBISNodeTool.con_argument_failing.raw=/tufts/vue/images/con_argument_failing.jpg
+IBISNodeTool.con_argument_failing.image=/tufts/vue/images/con_argument_failing.jpg
+IBISNodeTool.con_argument_failing.image.filename=icon_argument_failing.jpg
 
 IBISNodeTool.con_argument_failing.type=con_argument
 
