wormhole labels not now automatically set as this overwrites existing labels
git-svn-id: https://tuftsvue.svn.sourceforge.net/svnroot/tuftsvue/branches/helenoliver@10695 d66e5487-c4fa-4dda-8c8e-ca23240363c0

--- a/VUE2/src/tufts/vue/VueResources.properties
+++ b/VUE2/src/tufts/vue/VueResources.properties
@@ -1953,6 +1953,7 @@ IBISNodeTool.issue.image=/tufts/vue/images/issue.jpg
 IBISNodeTool.issue.image.filename=issue.jpg
 
 IBISNodeTool.issue.icon=/tufts/vue/images/issue_icon.jpg
+IBISNodeTool.issue.icon.filename=issue.jpg
 
 #HO 16/12/2010 BEGIN ********
 
