default target wormhole now appropriately labelled
git-svn-id: https://tuftsvue.svn.sourceforge.net/svnroot/tuftsvue/branches/helenoliver@10696 d66e5487-c4fa-4dda-8c8e-ca23240363c0

--- a/VUE2/src/tufts/vue/VueResources.properties
+++ b/VUE2/src/tufts/vue/VueResources.properties
@@ -2238,6 +2238,10 @@ IBISNodeTool.con_argument_failing.image.filename=icon_argument_failing.jpg
 IBISNodeTool.con_argument_failing.type=con_argument
 
 #HO 29/10/2010 END *******************
+#HO 19/12/2010 BEGIN ****************
+wormhole.node.source.label.default=
+wormhole.node.target.label.default=Click and drag to desired target node
+#HO 19/12/2010 END ****************
 
 linkTool.class=tufts.vue.LinkTool
 
