fixed bug whereby you couldn't save a self-linked wormhole in a .vpk file
git-svn-id: https://tuftsvue.svn.sourceforge.net/svnroot/tuftsvue/branches/helenoliver@10706 d66e5487-c4fa-4dda-8c8e-ca23240363c0

--- a/VUE2/src/tufts/vue/VueResources.properties
+++ b/VUE2/src/tufts/vue/VueResources.properties
@@ -625,6 +625,11 @@ dialog.revert.title=Can Not Revert
 dialog.checkforupdatesaction.message=There are no resource updates available at this time
 dialog.checkforupdatesaction.title=Update Resources
 
+#HO 27/12/2010 BEGIN ***************
+dialog.savewormholetovpk.message=Unable to save file.\nIf you were trying to save in .VPK format,\n first save in .VUE format, then try again.
+dialog.savewormholetovpk.title=Unable to Save File
+#HO 27/12/2010 END *****************
+
 # Class @ LocalFileDataSource
 dialog.export.message=Map cannot be exported
 dialog.export.title=Export Error
