--- a/VUE2/src/tufts/vue/VueResources.properties
+++ b/VUE2/src/tufts/vue/VueResources.properties
@@ -18,6 +18,10 @@ mapViewer.componentMenu.addURL.label=Add URL...
 mapViewer.componentMenu.replaceURL.label=Edit URL...
 mapViewer.componentMenu.removeResource.label=Remove Resource
 mapViewer.componentMenu.removeResourceKeepImage.label=Remove Resource (keep image)
+#HO 27/01/2011 BEGIN ****************
+mapViewer.componentMenu.addWormholeNew=Add Wormhole Into New Map
+mapViewer.componentMenu.addWormholeExisting=Add Wormhole Into Existing Map
+#HO 27/01/2011 END ******************
 mapViewer.mapMenu.info.label=Map Info
 mapViewer.componentMenu.selInfo.label=Selection Info
 mapViewer.componentMenu.nodeInfo.label=Node Info
