added a routine to handle it if someone tries to save a file that's already open in another tab
git-svn-id: https://tuftsvue.svn.sourceforge.net/svnroot/tuftsvue/branches/helenoliver@10767 d66e5487-c4fa-4dda-8c8e-ca23240363c0

--- a/VUE2/src/tufts/vue/VueResources.properties
+++ b/VUE2/src/tufts/vue/VueResources.properties
@@ -3002,6 +3002,12 @@ IBISNodeTool.con_argument_failing.type=con_argument
 wormhole.node.source.label.default=
 wormhole.node.target.label.default=Click and drag to desired target node
 #HO 19/12/2010 END ****************
+
+#HO 23/03/2011 BEGIN ***************
+#items related to saving files that are already open in another tab
+alreadyOpenFile.text=is already open. Please close it or choose another name.
+alreadyOpenFile.title=File Already Open
+#HO 23/03/2011 END ****************
 ######################################################################################################################
 #                                                                                                                    #
 # Make sure to add all new human-readable strings (that appear in the GUI and should be localized) above the comment #
