IBIS menus all sorted out, idea of using keystrokes abandoned
git-svn-id: https://tuftsvue.svn.sourceforge.net/svnroot/tuftsvue/branches/helenoliver@10785 d66e5487-c4fa-4dda-8c8e-ca23240363c0

--- a/VUE2/src/tufts/vue/VueResources.properties
+++ b/VUE2/src/tufts/vue/VueResources.properties
@@ -2708,6 +2708,8 @@ IBISNodeTool.issue.imageClass=tufts.vue.ibisimage.IBISIssueImage
 
 IBISNodeTool.issue.raw=/tufts/vue/images/issue_icon.jpg
 
+IBISNodeTool.issue.keystroke=73
+
 #HO 17/12/2010 BEGIN
 IBISNodeTool.issue.image=/tufts/vue/images/issue.jpg
 IBISNodeTool.issue.image.filename=issue.jpg
@@ -2737,6 +2739,8 @@ IBISNodeTool.answer.imageClass=tufts.vue.ibisimage.IBISAnswerImage
 
 IBISNodeTool.answer.raw=/tufts/vue/images/answer_icon.jpg
 
+IBISNodeTool.answer.keystroke=82
+
 IBISNodeTool.answer.image=/tufts/vue/images/answer.jpg
 IBISNodeTool.answer.image.filename=answer.jpg
 
@@ -2762,6 +2766,8 @@ IBISNodeTool.pro_argument.iconClass=tufts.vue.ibisicon.IBISProArgumentIcon
 IBISNodeTool.pro_argument.imageClass=tufts.vue.ibisimage.IBISProArgumentImage
 
 IBISNodeTool.pro_argument.raw=/tufts/vue/images/pro_argument_icon.jpg
+
+IBISNodeTool.pro_argument.keystroke=521
 
 IBISNodeTool.pro_argument.image=/tufts/vue/images/pro_argument.jpg
 IBISNodeTool.pro_argument.image.filename=pro_argument.jpg
@@ -2840,6 +2846,8 @@ IBISNodeTool.con_argument.iconClass=tufts.vue.ibisicon.IBISConArgumentIcon
 IBISNodeTool.con_argument.imageClass=tufts.vue.ibisimage.IBISConArgumentImage
 
 IBISNodeTool.con_argument.raw=/tufts/vue/images/con_argument_icon.jpg
+
+IBISNodeTool.con_argument.keystroke=45
 
 IBISNodeTool.con_argument.image=/tufts/vue/images/con_argument.jpg
 IBISNodeTool.con_argument.image.filename=con_argument.jpg
