restricted menus for IBIS nodes
git-svn-id: https://tuftsvue.svn.sourceforge.net/svnroot/tuftsvue/branches/helenoliver@10958 d66e5487-c4fa-4dda-8c8e-ca23240363c0

--- a/VUE2/src/tufts/vue/VueResources.properties
+++ b/VUE2/src/tufts/vue/VueResources.properties
@@ -2428,6 +2428,9 @@ ontologicalmembership.delete.down=/tufts/vue/images/btn_delete_down.gif
 # master slide styling
 masterSlide.css=/tufts/vue/resources/masterSlideTest.css
 
+#menus
+menu.ibisimage=IBIS Image
+
 #VUE File Filter Descriptions
 vueFileFilter.jpeg.text=JPEG
 
