refactoring plus changing default font size
git-svn-id: https://tuftsvue.svn.sourceforge.net/svnroot/tuftsvue/branches/helenoliver@10982 d66e5487-c4fa-4dda-8c8e-ca23240363c0

--- a/VUE2/src/tufts/vue/VueResources.properties
+++ b/VUE2/src/tufts/vue/VueResources.properties
@@ -1589,7 +1589,10 @@ mainToolbarToolNames=selectionTool,nodeModeTool,IBISNodeModeTool,linkModeTool,ra
 calaisUrl=http://api.opencalais.com/enlighten/calais.asmx/Enlighten
 
 #node.font=Trebuchet MS,plain,12
-node.font=Arial,plain,12
+#HO 18/05/2011 BEGIN **********
+#node.font=Arial,plain,12
+node.font=Arial,plain,16
+#HO 18/05/2011 END **********
 
 link.font=Arial,plain,11
 
