git-svn-id: https://tuftsvue.svn.sourceforge.net/svnroot/tuftsvue/branches/helenoliver@10989 d66e5487-c4fa-4dda-8c8e-ca23240363c0

--- a/VUE2/src/tufts/vue/VueResources.properties
+++ b/VUE2/src/tufts/vue/VueResources.properties
@@ -2718,10 +2718,13 @@ IBISNodeTool.issue.keystroke=73
 
 #HO 17/12/2010 BEGIN
 IBISNodeTool.issue.image=/tufts/vue/images/issue.jpg
+#IBISNodeTool.issue.image=/tufts/vue/images/issue.svg
 IBISNodeTool.issue.image.filename=issue.jpg
+#IBISNodeTool.issue.image.filename=issue.svg
 
 IBISNodeTool.issue.icon=/tufts/vue/images/issue_icon.jpg
 IBISNodeTool.issue.icon.filename=issue.jpg
+#IBISNodeTool.issue.icon.filename=issue.svg
 
 #HO 16/12/2010 BEGIN ********
 
@@ -2803,9 +2806,12 @@ IBISNodeTool.issue_resolved.type=issue
 #HO 13/12/2010 BEGIN ***************
 #IBISNodeTool.neptune.raw=/tufts/vue/images/chii_whistling.gif
 IBISNodeTool.issue_resolved.raw=/tufts/vue/images/issue_resolved.jpg
+#IBISNodeTool.issue_resolved.raw=/tufts/vue/images/issue_resolved.svg
 
 IBISNodeTool.issue_resolved.image=/tufts/vue/images/issue_resolved.jpg
+#IBISNodeTool.issue_resolved.image=/tufts/vue/images/issue_resolved.svg
 IBISNodeTool.issue_resolved.image.filename=issue_resolved.jpg
+#IBISNodeTool.issue_resolved.image.filename=issue_resolved.svg
 
 IBISNodeTool.issue_resolved.icon=/tufts/vue/images/chii_whistling_icon.gif
 #HO 13/12/2010 END ***************
