suppressed certain menu actions on wormholes; tweaked splash screen
git-svn-id: https://tuftsvue.svn.sourceforge.net/svnroot/tuftsvue/branches/helenoliver@10994 d66e5487-c4fa-4dda-8c8e-ca23240363c0

--- a/VUE2/src/tufts/vue/VueResources.properties
+++ b/VUE2/src/tufts/vue/VueResources.properties
@@ -718,6 +718,9 @@ button.resetallstyle.label=Reset All Slide Styles
 #SplashScreen
 splashscreen.title=VISUAL UNDERSTANDING ENVIRONMENT
 splashscreen.developedby=Developed by Academic Technology
+#HO 08/07/2011 BEGIN **********
+splashscreen.developedby.additions=VUE4Design edition by the Design Engineering Group
+#HO 08/07/2011 END **********
 
 #SyncDialog
 jbutton.nodetoslide.label=from node to slide
@@ -2323,6 +2326,10 @@ dsv.statuspanel.waitIcon=/tufts/vue/images/icon_feedback.gif
 vue.version=3.0
 
 vue.build.date=2003-2009
+# HO 08/07/2011 BEGIN **************
+vue4design.build.date=2010-2011
+vue4design.version=VUE4Design beta
+# HO 08/07/2011 END **************
 
 vue.release.url=http://vue.tufts.edu/current_release.xml
 
