fixed the bug whereby it was refusing to build the context menu for IBIS nodes because of a discrepancy in the active data file name.
git-svn-id: https://tuftsvue.svn.sourceforge.net/svnroot/tuftsvue/branches/helenoliver@11029 d66e5487-c4fa-4dda-8c8e-ca23240363c0

--- a/VUE2/src/tufts/vue/VueResources.properties
+++ b/VUE2/src/tufts/vue/VueResources.properties
@@ -719,7 +719,7 @@ button.resetallstyle.label=Reset All Slide Styles
 splashscreen.title=VISUAL UNDERSTANDING ENVIRONMENT
 splashscreen.developedby=Developed by Academic Technology
 #HO 08/07/2011 BEGIN **********
-splashscreen.developedby.additions=VUE4Design edition by the Design Engineering Group
+splashscreen.developedby.additions=designVUE edition by the Design Engineering Group
 #HO 08/07/2011 END **********
 
 #SyncDialog
@@ -1461,7 +1461,10 @@ resources.vue=VUE base properties loaded
 
 application.name=VUE
 
-application.title=VUE: Visual Understanding Environment
+# HO 26/10/2011 BEGIN ************
+// application.title=VUE: Visual Understanding Environment
+application.title=design Visual Understanding Environment
+# HO 26/10/2011 END ************
 
 application.features.tufts=true
 
@@ -2326,9 +2329,9 @@ dsv.statuspanel.waitIcon=/tufts/vue/images/icon_feedback.gif
 vue.version=3.0
 
 vue.build.date=2003-2009
-# HO 08/07/2011 BEGIN **************
-vue4design.build.date=2010-2011
-vue4design.version=VUE4Design beta
+# HO 08/07/2011 BEGIN ************
+designVUE.build.date=2010-2011
+designVUE.version=designVUE beta
 # HO 08/07/2011 END **************
 
 vue.release.url=http://vue.tufts.edu/current_release.xml
