labels adjusted, splash screen OK
git-svn-id: https://tuftsvue.svn.sourceforge.net/svnroot/tuftsvue/branches/helenoliver@11031 d66e5487-c4fa-4dda-8c8e-ca23240363c0

--- a/VUE2/src/tufts/vue/VueResources.properties
+++ b/VUE2/src/tufts/vue/VueResources.properties
@@ -291,7 +291,10 @@ menu.content=Content
 menu.pathways.editslide=Edit Slide
 menu.pathways.editmasterslide=Edit Master Slide
 menu.pathways.handoutsandnotes=Handouts and Notes
-menu.help.vuelog=VUE Log
+#HO 28/10/2011 BEGIN ************
+#menu.help.vuelog=VUE Log
+menu.help.vuelog=designVUE Log
+#HO 28/10/2011 END ************
 menu.windiws.openrecent=Open Recent
 menu.windows.save=Save
 menu.windows.saveas=Save As...
@@ -586,12 +589,20 @@ action.undo=Undo
 action.redo=Redo
 
 #Preference Dialog 
-dialog.preference.message=You must restart VUE for this change to take effect.
-dialog.preference.title=Restart VUE
+#HO 28/10/2011 BEGIN**************
+#dialog.preference.message=You must restart VUE for this change to take effect.
+#dialog.preference.title=Restart VUE
+dialog.preference.message=You must restart designVUE for this change to take effect.
+dialog.preference.title=Restart designVUE
+#HO 28/10/2011 END**************
 
 #Preferences window
 preferences.language.title=Language
-preferences.language.description=Language to use: this will over-ride (for VUE only) the language chosen as the system preference.  You must restart VUE for any change to take effect.
+#HO 28/10/2011 BEGIN**************
+#preferences.language.description=Language to use: this will over-ride (for VUE only) the language chosen as the system preference.  You must restart VUE for any change to take effect.
+preferences.language.description=Language to use: this will over-ride (for designVUE only) the language chosen as the system preference.  You must restart designVUE for any change to take effect.
+
+#HO 28/10/2011 END **************
 preferences.language.loading=Loading...
 
 # Application Frame Dialog
@@ -648,7 +659,10 @@ optiondialog.savechages.message=Do you want to save the changes you made to
 optiondialog.savechages.title=Save changes?
 optiondialog.savechages.dontsave=Don't Save
 optiondialog.savechages.save=Save
-dialog.initfailed.message=VUE init failed
+#HO 28/10/2011 BEGIN **********
+#dialog.initfailed.message=VUE init failed
+dialog.initfailed.message=designVUE init failed
+#HO 28/10/2011 END **********
 
 #Action
 dialog.activemap.message=There is no active map, please open a valid map.
@@ -719,7 +733,7 @@ button.resetallstyle.label=Reset All Slide Styles
 splashscreen.title=VISUAL UNDERSTANDING ENVIRONMENT
 splashscreen.developedby=Developed by Academic Technology
 #HO 08/07/2011 BEGIN **********
-splashscreen.developedby.additions=designVUE edition by the Design Engineering Group
+splashscreen.developedby.additions=Developed by Design Engineering Group
 #HO 08/07/2011 END **********
 
 #SyncDialog
@@ -739,7 +753,10 @@ jbutton.load.label=Load
 pane.dataset.message=Please select the dataset type
 
 #PreferenceDailog
-preferencedailog.vuepreference=VUE Preferences
+#HO 28/10/2011 BEGIN ****************
+#preferencedailog.vuepreference=VUE Preferences
+preferencedailog.vuepreference=designVUE Preferences
+#HO 28/10/2011 END ****************
 preferencedailog.mapdisplay=Map Display
 preferencedailog.images=Images
 
@@ -921,12 +938,21 @@ actionutil.filecorrupted.error=Save error; map file may now be corrupted -- try 
 actionutil.filecorrupted.description=Problem description
 actionutil.internalsave.title=Internal Save Error
 actionutil.notifyversion.message=The file %s was saved in a newer version of VUE than is currently running.
-actionutil.notifyversion.datamodel=The data model in this map is #%d, and this version of VUE only understands up to model #%d.
+#HO 28/10/2011 BEGIN *********
+#actionutil.notifyversion.datamodel=The data model in this map is #%d, and this version of VUE only understands up to model #%d.
+actionutil.notifyversion.datamodel=The data model in this map is #%d, and this version of designVUE only understands up to model #%d.
+#HO 28/10/2011 END *********
 actionutil.notifyversion.savedversion=Version of VUE that saved this file
-actionutil.notifyversion.currentversion=Current running version of VUE
-actionutil.notifyversion.vuebuilt=VUE built
-actionutil.notifyversion.displaymap=This version of VUE may not display this map properly.  Saving
-actionutil.notifyversion.corruptmap=this map in this version of VUE may result in a corrupted map.
+#HO 28/10/2011 BEGIN *********
+#actionutil.notifyversion.currentversion=Current running version of VUE
+actionutil.notifyversion.currentversion=Current running version of designVUE
+#actionutil.notifyversion.vuebuilt=VUE built
+actionutil.notifyversion.vuebuilt=designVUE built
+#actionutil.notifyversion.displaymap=This version of VUE may not display this map properly.  Saving
+actionutil.notifyversion.displaymap=This version of designVUE may not display this map properly.  Saving
+#actionutil.notifyversion.corruptmap=this map in this version of VUE may result in a corrupted map.
+actionutil.notifyversion.corruptmap=this map in this version of designVUE may result in a corrupted map.
+#HO 28/10/2011 END *********
 actionutil.notifyversion.versionwarning=Version Warning %s
 actionutil.filenotfound.error=Could not find
 actionutil.filenotfound.title=File Not Found
@@ -938,7 +964,10 @@ imagemap.fileexists.warning=png image already exists, overwrite?
 imagemap.fileexists.title=File Already Exists
 
 #OpenAction
-openaction.mapopen.error=The following map can't be opened in current version of VUE.
+#HO 28/10/2011 BEGIN **************
+#openaction.mapopen.error=The following map can't be opened in current version of VUE.
+openaction.mapopen.error=The following map can't be opened in current version of designVUE.
+#HO 28/10/2011 END **************
 openaction.mapopen.title=Map Open Error
 openaction.mapnotfound.error=file not found.
 openaction.mapnotfound.title=Map Not Found
@@ -948,7 +977,10 @@ openaction.openmapproblem.title=Problem Opening Map
 publishdatasourceaction.title=Publish Error
 
 #RFDOpenAction
-rfdopenaction.openfile.error=cannot be opened in this version of VUE.
+#HO 28/10/2011 BEGIN **************
+#rfdopenaction.openfile.error=cannot be opened in this version of VUE.
+rfdopenaction.openfile.error=cannot be opened in this version of designVUE.
+#HO 28/10/2011 END **************
 rfdopenaction.openfile.title=Map Open Error
 
 #SaveAction
@@ -957,7 +989,10 @@ saveaction.targetfiel=Target file was '%s'
 saveaction.savemap.error=There was an error saving map
 saveaction.saveacopy=Save a copy
 saveaction.save=Save
-dialog.saveaction.message=Saving {0} in this version of VUE will prevent older versions of VUE from displaying it properly.  You may wish to save this map under a new name.
+#HO 28/10/2011 BEGIN **********
+#dialog.saveaction.message=Saving {0} in this version of VUE will prevent older versions of VUE from displaying it properly.  You may wish to save this map under a new name.
+dialog.saveaction.message=Saving {0} in this version of designVUE will prevent older versions of VUE from displaying it properly.  You may wish to save this map under a new name.
+#HO 28/10/2011 END **********
 dialog.saveaction.title=Version Notice {0}
 
 #OntologyList
@@ -1104,7 +1139,10 @@ jlabel.more=<< more
 jlabel.less=less >>
 jlabel.resourcemetadata=Resource Metadata
 jlabel.all=All
-jlabel.newversion=A newer version of VUE is available
+#HO 28/10/2011 BEGIN **************
+#jlabel.newversion=A newer version of VUE is available
+jlabel.newversion=A newer version of designVUE is available
+#HO 28/10/2011 END **************
 jlabel.assetdisplayoffline=Asset Display Offline
 showagaindialog.donotshow.tooltip=don't show again 
 vuemenubar.printvisible.tooltip=Print Visible
@@ -1321,7 +1359,10 @@ im.button.zoom=Keep map at 100%
 im.button.enforce=Limit # of columns
 im.approve.message=Do you want to allow {0} to contribute to this map?
 im.title = AOL IM
-im.preference.description=AOL Instant Messenger is an experimental feature on the Map Info panel;  to try the feature, enable it and restart VUE.
+#HO 28/10/2011 BEGIN ************
+#im.preference.description=AOL Instant Messenger is an experimental feature on the Map Info panel;  to try the feature, enable it and restart VUE.
+im.preference.description=AOL Instant Messenger is an experimental feature on the Map Info panel;  to try the feature, enable it and restart designVUE.
+#HO 28/10/2011 END ************
 im.preference.message=Enable AOL Instant Messenger
 
 #Interaction Tools window
@@ -1343,7 +1384,10 @@ interactionTools.off=off
 
 #SEASR
 seasr.analysis.title=SEASR Analysis
-seasr.analysis.subtitle=Analyze a webpage using a Seasr flow and return results to VUE
+#HO 28/10/2011 BEGIN *************
+#seasr.analysis.subtitle=Analyze a webpage using a Seasr flow and return results to VUE
+seasr.analysis.subtitle=Analyze a webpage using a Seasr flow and return results to designVUE
+#HO 28/10/2011 END *************
 seasr.analysis.1=1
 seasr.analysis.2=2
 seasr.analysis.3=3
@@ -1418,7 +1462,10 @@ quickImport.selectfile=Location:
 quickImport.browse=Browse
 quickImport.cancel=Cancel
 quickImport.add=Add
-quickImport.help=<html>Add content to a new VUE map. CSV, XML, RSS, RDF, OWL files <br>and folders (images or files) are supported.  CSV, XML, and RSS files <br>will be added to the Datasets tab of the Content window.</html>
+#HO 28/10/2011 BEGIN **********
+#quickImport.help=<html>Add content to a new VUE map. CSV, XML, RSS, RDF, OWL files <br>and folders (images or files) are supported.  CSV, XML, and RSS files <br>will be added to the Datasets tab of the Content window.</html>
+quickImport.help=<html>Add content to a new designVUE map. CSV, XML, RSS, RDF, OWL files <br>and folders (images or files) are supported.  CSV, XML, and RSS files <br>will be added to the Datasets tab of the Content window.</html>
+#HO 28/10/2011 END **********
 
 # Java Analysis
 menu.windows.java=Java...
@@ -1436,7 +1483,10 @@ analyze.java.analyzeInnerInterfaces=Including inner interfaces
 analyze.java.error=An error occurred during Java Analysis.
 analyze.java.parsing=parsing...
 analyze.java.displaying=displaying...
-analyze.java.preference.description=Java Analysis is an experimental feature on the Analysis menu;  to try the feature, enable it and restart VUE.
+#HO 28/10/2011 BEGIN **********
+#analyze.java.preference.description=Java Analysis is an experimental feature on the Analysis menu;  to try the feature, enable it and restart VUE.
+analyze.java.preference.description=Java Analysis is an experimental feature on the Analysis menu;  to try the feature, enable it and restart designVUE.
+#HO 28/10/2011 END **********
 analyze.java.preference.message=Enable Java Analysis
 
 # HTML Output sizing dialog
@@ -1456,13 +1506,12 @@ htmloutput.pixels=Pixels
 #                                                                                                                   #
 #####################################################################################################################
 
-
-resources.vue=VUE base properties loaded
-
-application.name=VUE
-
 # HO 26/10/2011 BEGIN ************
-// application.title=VUE: Visual Understanding Environment
+#resources.vue=VUE base properties loaded
+resources.vue=designVUE base properties loaded
+#application.name=VUE
+application.name=designVUE
+#application.title=VUE: Visual Understanding Environment
 application.title=design Visual Understanding Environment
 # HO 26/10/2011 END ************
 
