added some designVUE-specific help menu items
git-svn-id: https://tuftsvue.svn.sourceforge.net/svnroot/tuftsvue/branches/helenoliver@11032 d66e5487-c4fa-4dda-8c8e-ca23240363c0

--- a/VUE2/src/tufts/vue/VueResources.properties
+++ b/VUE2/src/tufts/vue/VueResources.properties
@@ -397,9 +397,16 @@ dialog.saveaspdf.title=Save as PDF
 dialog.save.title=Save
 
 #help menu
-helpMenu.feedback.label=Feedback
-helpMenu.userGuide.label=User Guide
-helpMenu.vueWebsite.label=Forum
+#HO 31/10/2011 BEGIN *************
+#helpMenu.feedback.label=Feedback
+helpMenu.feedback.label=VUE Feedback
+helpMenu.designVUEfeedback.label=designVUE Feedback
+#helpMenu.userGuide.label=User Guide
+helpMenu.userGuide.label=VUE User Guide
+helpMenu.designVUEUserGuide.label=designVUE User Guide
+#helpMenu.vueWebsite.label=Forum
+helpMenu.vueWebsite.label=VUE Forum
+#HO 31/10/2011 END *************
 helpMenu.releaseNotes.label=Release Notes
 helpMenu.mymaps.label=My Maps
 
@@ -2391,6 +2398,10 @@ vue.download.url=http://vue.tufts.edu/download/index.cfm?fromvue=1
 helpMenu.feedback.url=http://vue.uit.tufts.edu/contact/index.cfm
 
 helpMenu.userGuide.url=http://vue.uit.tufts.edu/userdoc/
+// HO 31/10/2011 BEGIN *********
+helpMenu.designVUEUserGuide.url=http://www3.imperial.ac.uk/designengineering/tools/vue/
+helpMenu.designVUEfeedback.url=mailto:designvue.imperial@gmail.com?subject=designVUE%20Feedback
+// HO 31/10/2011 END ***********
 
 helpMenu.vueWebsite.url=http://vue.uit.tufts.edu/forums/index.cfm
 
