last before beta release
git-svn-id: https://tuftsvue.svn.sourceforge.net/svnroot/tuftsvue/branches/helenoliver@11033 d66e5487-c4fa-4dda-8c8e-ca23240363c0

--- a/VUE2/src/tufts/vue/VueResources.properties
+++ b/VUE2/src/tufts/vue/VueResources.properties
@@ -406,6 +406,7 @@ helpMenu.userGuide.label=VUE User Guide
 helpMenu.designVUEUserGuide.label=designVUE User Guide
 #helpMenu.vueWebsite.label=Forum
 helpMenu.vueWebsite.label=VUE Forum
+helpMenu.designVUEForum.label=designVUE Forum
 #HO 31/10/2011 END *************
 helpMenu.releaseNotes.label=Release Notes
 helpMenu.mymaps.label=My Maps
@@ -2401,6 +2402,7 @@ helpMenu.userGuide.url=http://vue.uit.tufts.edu/userdoc/
 // HO 31/10/2011 BEGIN *********
 helpMenu.designVUEUserGuide.url=http://www3.imperial.ac.uk/designengineering/tools/vue/
 helpMenu.designVUEfeedback.url=mailto:designvue.imperial@gmail.com?subject=designVUE%20Feedback
+helpMenu.designVUEForum.url=https://vue-forums.uit.tufts.edu/forums/show/23.page
 // HO 31/10/2011 END ***********
 
 helpMenu.vueWebsite.url=http://vue.uit.tufts.edu/forums/index.cfm
