messy checkin for better error message if target node not found in existing file
git-svn-id: https://tuftsvue.svn.sourceforge.net/svnroot/tuftsvue/branches/helenoliver@11035 d66e5487-c4fa-4dda-8c8e-ca23240363c0

--- a/VUE2/src/tufts/vue/VueResources.properties
+++ b/VUE2/src/tufts/vue/VueResources.properties
@@ -975,6 +975,8 @@ imagemap.fileexists.title=File Already Exists
 #HO 28/10/2011 BEGIN **************
 #openaction.mapopen.error=The following map can't be opened in current version of VUE.
 openaction.mapopen.error=The following map can't be opened in current version of designVUE.
+openaction.missingtargetnode.error=The target node was not found in any local file with the name
+openaction.missingtargetnode.title=Target Node Not Found
 #HO 28/10/2011 END **************
 openaction.mapopen.title=Map Open Error
 openaction.mapnotfound.error=file not found.
