in testing phase after merging updatesfrom mainstream VUE
git-svn-id: https://tuftsvue.svn.sourceforge.net/svnroot/tuftsvue/branches/helenoliver@11048 d66e5487-c4fa-4dda-8c8e-ca23240363c0

--- a/VUE2/src/tufts/vue/VueResources.properties
+++ b/VUE2/src/tufts/vue/VueResources.properties
@@ -6,7 +6,7 @@
 # This section contains metadata used by VUE to identify the language and file verions
 info.language    = English
 info.fileVersion = 1.1
-info.VUEVersion  = 3.0
+info.VUEVersion  = 3.1.1
 
 #mapviewer component menu
 mapViewer.componentMenu.info.label=Info
@@ -68,7 +68,6 @@ objectAssetTitle=Resource Inspector
 mapInfoTabName=Info
 mapPathwayTabName=Pathway
 mapFilterTabName=Filter
-filterPanelColor=6273A1
 nodeInfoTabname=Info
 nodeTreeTabName=Node Tree
 nodeNoteTabName=Notes
@@ -244,6 +243,7 @@ menu.view.hidenodefringe=Hide Node Fringe
 menu.view.splitscreen=Split Screen
 menu.view.slidethumbnails=Slide Thumbnails
 menu.view.collapseAll=Collapse Nodes
+menu.view.hideLinks=Hide Links
 menu.format.group=Group
 menu.format.ungroup=Ungroup
 menu.view.collapse=Hide Node Content
@@ -301,8 +301,8 @@ menu.windows.saveas=Save As...
 menu.windows.open=Open...
 menu.windows.openfromurl=Open from URL...
 
-# we're going to use exit on windows and quit on mac to conform to platform
-# standards.  this would normall be defined in the __Mac and __Win files but 
+# We're going to use exit on windows and quit on mac to conform to platform
+# standards.  This would normally be defined in the __Mac and __Win files but
 # I'm guessing its easier to do it here and case it in the code for internationalization -MK
 menu.windows.exit=Exit
 menu.windows.quit=Quit
@@ -354,7 +354,7 @@ menu.format.arrange.ripple=Ripple Out
 menu.format.layout.stretch=Stretch
 menu.format.layout.search=Search
 menu.format.layout.force=Gravity (Filled Circle)
-menu.format.layout.hierarchical=Hierarchical
+menu.format.layout.hierarchical=Hierarchical (Radial)
 menu.format.align.nudgeup=Nudge Up
 menu.format.align.nudgedown=Nudge Down
 menu.format.align.nudgeleft=Nudge Left
@@ -1243,6 +1243,8 @@ analyzeaction.yahoocontent=Yahoo Content Analyzer
 analyzeraction.selectnode=Please Select Node
 keywordPanel.autotag=auto-tag
 analyzeaction.luckyimage=Add Most Relevant flickr Image
+analyzeaction.usingopencalais=Using OpenCalais
+analyzeaction.usingalchemyapi=Using AlchemyAPI
 
 #inspectorpane
 inspectorpane.pathwaynotes=Pathway Notes
@@ -1384,11 +1386,15 @@ interactionTools.zoomMap=Fit
 interactionTools.zoomMap.toolTip=Zoom out to fit the whole map into the window.
 interactionTools.auto=Automatic
 interactionTools.auto.toolTip=Automatically zoom in to show the selected items, and out to fit the map when nothing is selected.
-interactionTools.opacity=Opacity:
-interactionTools.opacity.toolTip=Set the opacity of unselected items.
-interactionTools.depth=<html>Expand <br>Selection:</html>
+interactionTools.fade.toolTip=Set the opacity of unselected items.
 interactionTools.depth.toolTip=Expand the selection depth to include additional linked nodes.
-interactionTools.fadeAndDepthWidget=Opacity and Expand Selection
+interactionTools.linkDirection.label=Links:
+interactionTools.incomingLinks=Incoming
+interactionTools.incomingLinks.toolTip=Expand the selection to include nodes which point to the selected nodes.
+interactionTools.outgoingLinks=Outgoing
+interactionTools.outgoingLinks.toolTip=Expand the selection to include nodes pointed to by the selected nodes.
+interactionTools.fadeWidget=Opacity
+interactionTools.depthWidget=Expand Selection
 interactionTools.zoomWidget=Zoom
 interactionTools.off=off
 
@@ -1498,6 +1504,8 @@ analyze.java.displaying=displaying...
 analyze.java.preference.description=Java Analysis is an experimental feature on the Analysis menu;  to try the feature, enable it and restart designVUE.
 #HO 28/10/2011 END **********
 analyze.java.preference.message=Enable Java Analysis
+menu.format.layout.hierarchical2=Hierarchical (Tree)
+menu.format.layout.hierarchical3=Hierarchical (Inverted Tree)
 
 # HTML Output sizing dialog
 htmloutput.title=HTML Output Settings
@@ -1507,6 +1515,12 @@ htmloutput.cancel=Cancel
 htmloutput.width=Width
 htmloutput.height=Height
 htmloutput.pixels=Pixels
+htmloutput.format=Image Format
+htmloutput.dimensions=Dimensions
+
+# Alchemy API
+dialog.alchemyapikey.title=Enter AlchemyAPI key
+dialog.alchemyapikey.label=An AlchemyAPI key has not yet been configured. Would you like to enter one for use during this open application session? (Keys can be generated at alchemyapi.com.  Go to preferences to save key permanently.)
 
 #####################################################################################################################
 #                                                                                                                   #
@@ -1640,6 +1654,7 @@ dividerBarColor=909090
 toolbar.font=default,plain,12
 
 toolbar.background=afb6c6
+filterPanelColor=6273A1
 
 #HO 23/06/2010 BEGIN ***********************
 #appletToolbarToolNames=selectionTool,nodeModeTool,linkModeTool,rapidLinkModeTool,richTextTool,separator,zoomTool,handTool
@@ -1856,7 +1871,7 @@ nodeTool.class=tufts.vue.NodeTool
 nodeTool.name=Node Tool
 
 #nodeTool.subtools=roundRect,rect,oval,triangle,diamond,pentagon,hexagon,octagon
-nodeTool.subtools=roundRect,rect,oval,diamond,hexagon,octagon,flag,triangle,shield
+nodeTool.subtools=roundRect,rect,oval,diamond,hexagon,octagon,flag,triangle,shield,rhombus,chevron
 
 nodeTool.defaultSubtool=roundRect
 
@@ -1915,6 +1930,14 @@ nodeTool.shield.cssName=shield
 
 nodeTool.shield.shapeClass=tufts.vue.shape.RectangularPoly2D$Shield
 
+ nodeTool.rhombus.class=tufts.vue.NodeTool$SubTool
+	 
+nodeTool.rhombus.name=Rhombus
+ 	 
+nodeTool.rhombus.cssName=rhombus
+	 
+nodeTool.rhombus.shapeClass=tufts.vue.shape.RectangularPoly2D$Rhombus
+
 nodeTool.diamond.class=tufts.vue.NodeTool$SubTool
 
 nodeTool.diamond.name=Diamond
@@ -1946,6 +1969,14 @@ nodeTool.octagon.name=Octagon
 nodeTool.octagon.cssName=octagon
 
 nodeTool.octagon.shapeClass=tufts.vue.shape.RectangularPoly2D$Octagon
+
+nodeTool.chevron.class=tufts.vue.NodeTool$SubTool
+ 
+nodeTool.chevron.name=Chevron
+
+nodeTool.chevron.cssName=chevron
+
+nodeTool.chevron.shapeClass=tufts.vue.shape.RectangularPoly2D$Chevron
 
 linkTool.class=tufts.vue.LinkTool
 
@@ -2385,9 +2416,9 @@ dsv.statuspanel.bgColor=#FFFFFF
 dsv.statuspanel.waitIcon=/tufts/vue/images/icon_feedback.gif
 
 #Version
-vue.version=3.0
+vue.version=3.1.1
 
-vue.build.date=2003-2009
+vue.build.date=2003-2011
 # HO 08/07/2011 BEGIN ************
 designVUE.build.date=2010-2011
 designVUE.version=designVUE beta
@@ -2715,6 +2746,9 @@ twitter.tweet.font=SansSerif,plain,16
 twitter.clusterValue.text.color=#FFFFFF
 twitter.clusterValue.color.cycle=760aca,d38d01,026cb1,cc0d03,be02c0,2e2e83,a9a701,8c8f72,049a87,54628b
 twitter.clusterValue.font=SansSerif,bold,21
+
+#parke wilde
+widetall=/tufts/vue/images/widetall.png
 
 #HO added settings - for easy copy & paste
 #HO 27/01/2011 BEGIN ****************
